tests/pass/struct_null_pointer.kl
molda No {
    nter valor,
    No* proksimu,
}

fn inisiu() {
    No no = No { valor: 1, proksimu: nada };
    si no.proksimu == nada {
        mostran(no.valor);
    }
}
