tests/fail/fail_arg_type_mismatch.kl
fn gritar(textu msg) {
    mostran(msg);
}

fn inisiu() {
    gritar(42);
}
